# criazap-backend

criazap/: db.sqlite3  manage.py  pyproject.toml
criazap/chat/: models.py
criazap/core/: admin.py  models.py  responses.py  serializers.py  views.py
criazap/criazap/: asgi.py  settings.py  urls.py  wsgi.py
